# shibori-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml
assets/: README.md
cmake/: Blake3.cmake  ShiboriEngineConfig.cmake.in
docs/: adaptive-policy.md  api.md  architecture.md  blocks.md  build-and-packaging.md  byte-io.md  columns.md  compatibility.md  compression-pipeline.md  container-format.md  data-model.md  design.md  error-handling.md  format-primitives.md  glossary.md  integrity-values.md  logical-types.md  product-requirements.md  reliability-security.md  resource-governance.md  roadmap.md  schemas.md  support.md  testing.md
docs/design/: record-envelope-encoder.md  record-envelope-parser.md  record-sequence-and-unknown-types.md
include/shibori/engine/: block.hpp  checked_arithmetic.hpp  column.hpp  error.hpp  integrity.hpp  io.hpp  logical_type.hpp  resource.hpp  result.hpp  schema.hpp  version.hpp
src/: block.cpp  checked_arithmetic.cpp  column.cpp  crc32c_backend.hpp  crc32c_x86.cpp  error.cpp  file_io.cpp  integrity.cpp  io.cpp  logical_type.cpp  resource.cpp  schema.cpp  version.cpp
src/format/: endian.cpp  endian.hpp  preamble.cpp  preamble.hpp  record.cpp  record.hpp
tests/: CMakeLists.txt  blake3_test.cpp  block_test.cpp  column_test.cpp  crc32c_test.cpp  error_test.cpp  format_endian_test.cpp  integrity_value_test.cpp  io_file_test.cpp  io_memory_test.cpp  io_test_adapters.hpp  logical_type_test.cpp  preamble_encode_test.cpp  preamble_parse_test.cpp  record_envelope_encode_test.cpp  record_envelope_parse_test.cpp  record_sequence_test.cpp  resource_test.cpp  schema_test.cpp  smoke_test.cpp
tests/package-consumer/: CMakeLists.txt  main.cpp
